# project_fastapi_2

./: main.py  pyproject.toml
models/: model.py
public/: users.py
